namespace MTCG.Cards
{
    public enum ElementType
    {
        Fire,
        Water,
        Normal
    }
}