namespace MTCG.Cards.Monsters
{
    public enum MonsterType
    {
        Goblin,
        Wizard,
        Dragon,
        Kraken,
        Orc,
        Elf,
        Knight,
        Other
    }
}